# nano-cohere-transcribe

./: .gitignore  README.md  benchmark.sh  benchmark_coldstart.py  benchmark_datasets.py  benchmark_hf.py  benchmark_long.py  benchmark_nano.py  benchmark_vllm.py  environment.yml  pyproject.toml  transcribe.py
demo/: requirements.txt
nano_cohere_transcribe/: __init__.py  __main__.py  _graph.py  _loader.py  api.py  audio.py  chunk.py  generate.py  mel.py  model.py  tokenizer.py
tests/: test_batch.py  test_chunk.py  test_end_to_end_sample.py  test_generate_shapes.py  test_long_audio.py  test_mel.py  test_tokenizer.py
