[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nano_cohere_transcribe"
version = "0.1.0"
description = "Pure-PyTorch inference for CohereLabs/cohere-transcribe-03-2026 (no transformers)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Steven" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "numpy",
    "soundfile",
    "sentencepiece",
    "huggingface-hub",
    "safetensors",
]

[project.scripts]
nano-cohere-transcribe = "nano_cohere_transcribe.__main__:main"

[tool.setuptools.packages.find]
include = ["nano_cohere_transcribe*"]

[tool.pytest.ini_options]
markers = [
    "slow: heavyweight tests (load full 2B model and/or run long audio) — opt in with `-m slow`",
]
